# ssbu-model-viewer-

./: LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: binaryReader.ts  main.ts  materialParser.ts  meshParser.ts  skeletonParser.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
