[package]
name = "ssbu-model-viewer"
version = "0.1.0"
description = "Universal cross-platform viewer for Smash Ultimate models"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc" }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
